--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -464,7 +464,7 @@ section {
 
   .mobile-nav-toggle {
     display: block !important;
-    color: var(--color-secondary);
+    color: #fff;
     font-size: 28px;
     cursor: pointer;
     line-height: 0;
@@ -540,7 +540,7 @@ section {
 }
 
 .hero-animated .hero-hello {
-  font-size: 6em;
+  font-size: 5.5em;
   color: #fff;
 }
 
@@ -607,7 +607,7 @@ section {
 }
 @media (max-width: 640px) {
   .hero-animated h2 {
-    font-size: 32px;
+    font-size: 4em !important;
   }
   .hero-animated p {
     font-size: 18px;
@@ -1624,9 +1624,10 @@ p.summary {
   line-height: 1;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
+  color: #fff;
 }
 .portfolio .portfolio-flters li:hover, .portfolio .portfolio-flters li.filter-active {
-  color: var(--color-primary);
+  color: #f45b5b;
 }
 .portfolio .portfolio-flters li:first-child {
   margin-left: 0;
@@ -2632,22 +2633,4 @@ p.summary {
 }
 .footer .footer-legal .credits a {
   color: var(--color-primary-light);
-}
-.footer .footer-legal .social-links a {
-  font-size: 18px;
-  display: inline-block;
-  background: rgba(var(--color-white-rgb), 0.1);
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
-  border-radius: 4px;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-}
-.footer .footer-legal .social-links a:hover {
-  background: var(--color-primary);
-  text-decoration: none;
 }
