--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,65 +25,6 @@ body {
 
 
 /*--------------------------------------------------------------
-# Preloader
---------------------------------------------------------------*/
-#preloader {
-  position: fixed;
-  inset: 0;
-  z-index: 9999;
-  overflow: hidden;
-  background: #fff;
-  transition: all 0.6s ease-out;
-  width: 100%;
-  height: 100vh;
-}
-#preloader:before, #preloader:after {
-  content: "";
-  position: absolute;
-  border: 4px solid var(--color-primary);
-  border-radius: 50%;
-  -webkit-animation: animate-preloader 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-  animation: animate-preloader 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-#preloader:after {
-  -webkit-animation-delay: -0.5s;
-  animation-delay: -0.5s;
-}
-
-@-webkit-keyframes animate-preloader {
-  0% {
-    width: 10px;
-    height: 10px;
-    top: calc(50% - 5px);
-    left: calc(50% - 5px);
-    opacity: 1;
-  }
-  100% {
-    width: 72px;
-    height: 72px;
-    top: calc(50% - 36px);
-    left: calc(50% - 36px);
-    opacity: 0;
-  }
-}
-
-@keyframes animate-preloader {
-  0% {
-    width: 10px;
-    height: 10px;
-    top: calc(50% - 5px);
-    left: calc(50% - 5px);
-    opacity: 1;
-  }
-  100% {
-    width: 72px;
-    height: 72px;
-    top: calc(50% - 36px);
-    left: calc(50% - 36px);
-    opacity: 0;
-  }
-}
-/*--------------------------------------------------------------
 # Sections & Section Header
 --------------------------------------------------------------*/
 section {
@@ -114,6 +55,7 @@ section {
     color: #fff;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Breadcrumbs
@@ -164,6 +106,7 @@ section {
   }
 }
 
+
 /*--------------------------------------------------------------
 # Scroll top button
 --------------------------------------------------------------*/
@@ -206,6 +149,7 @@ section {
   }
 }
 
+
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
 --------------------------------------------------------------*/
@@ -214,6 +158,8 @@ section {
     transition-delay: 0 !important;
   }
 }
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -260,6 +206,7 @@ section {
     margin-right: 50px;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Desktop Navigation 
@@ -400,6 +347,8 @@ section {
     left: -100%;
   }
 }
+
+
 /*--------------------------------------------------------------
 # Mobile Navigation
 --------------------------------------------------------------*/
@@ -486,6 +435,8 @@ section {
     z-index: 9996;
   }
 }
+
+
 /*--------------------------------------------------------------
 # Index Page
 --------------------------------------------------------------*/
@@ -544,8 +495,6 @@ section {
   color: #fff;
   font-weight: bolder;
 }
-
-
 
 @media (min-width: 992px) {
   .hero-animated .animated {
@@ -627,6 +576,8 @@ section {
     transform: translateY(-10px);
   }
 }
+
+
 /*--------------------------------------------------------------
 # Carousel Hero Section
 --------------------------------------------------------------*/
@@ -916,119 +867,6 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# Static Hero Section
---------------------------------------------------------------*/
-.hero-static {
-  width: 100%;
-  min-height: 50vh;
-  background: url("../img/hero-bg.png") center center;
-  background-size: cover;
-  position: relative;
-  padding: 120px 0 60px;
-}
-.hero-static h2 {
-  margin: 0 0 10px 0;
-  font-size: 48px;
-  font-weight: 300;
-  color: var(--color-secondary);
-  font-family: var(--font-secondary);
-}
-.hero-static h2 span {
-  color: var(--color-primary);
-}
-.hero-static p {
-  color: rgba(var(--color-secondary-rgb), 0.8);
-  margin: 0 0 30px 0;
-  font-size: 20px;
-  font-weight: 400;
-}
-.hero-static .btn-get-started {
-  font-size: 16px;
-  font-weight: 400;
-  display: inline-block;
-  padding: 10px 28px;
-  border-radius: 4px;
-  transition: 0.5s;
-  color: #fff;
-  background: var(--color-primary);
-  font-family: var(--font-secondary);
-}
-.hero-static .btn-get-started:hover {
-  background: rgba(var(--color-primary-rgb), 0.8);
-}
-.hero-static .btn-watch-video {
-  font-size: 16px;
-  transition: 0.5s;
-  margin-left: 25px;
-  font-family: var(--font-secondary);
-  color: var(--color-secondary);
-  font-weight: 600;
-}
-.hero-static .btn-watch-video i {
-  color: var(--color-primary);
-  font-size: 32px;
-  transition: 0.3s;
-  line-height: 0;
-  margin-right: 8px;
-}
-.hero-static .btn-watch-video:hover {
-  color: var(--color-primary);
-}
-.hero-static .btn-watch-video:hover i {
-  color: rgba(var(--color-primary-rgb), 0.8);
-}
-@media (max-width: 640px) {
-  .hero-static h2 {
-    font-size: 32px;
-  }
-  .hero-static p {
-    font-size: 18px;
-    margin-bottom: 30px;
-  }
-  .hero-static .btn-get-started, .hero-static .btn-watch-video {
-    font-size: 14px;
-  }
-}
-
-/*--------------------------------------------------------------
-# Featured connect Section
---------------------------------------------------------------*/
-.featured-connect .service-item {
-  padding: 30px;
-  transition: all ease-in-out 0.4s;
-  background: #fff;
-  height: 100%;
-}
-.featured-connect .service-item .icon {
-  margin-bottom: 10px;
-}
-.featured-connect .service-item .icon i {
-  color: var(--color-primary);
-  font-size: 36px;
-  transition: 0.3s;
-}
-.featured-connect .service-item h4 {
-  font-weight: 600;
-  margin-bottom: 15px;
-  font-size: 24px;
-}
-.featured-connect .service-item h4 a {
-  color: var(--color-secondary);
-  transition: ease-in-out 0.3s;
-}
-.featured-connect .service-item p {
-  line-height: 24px;
-  font-size: 14px;
-  margin-bottom: 0;
-}
-.featured-connect .service-item:hover {
-  transform: translateY(-10px);
-  box-shadow: 0px 0 60px 0 rgba(var(--color-secondary-rgb), 0.1);
-}
-.featured-connect .service-item:hover h4 a {
-  color: var(--color-primary);
-}
 
 /*--------------------------------------------------------------
 # About Section
@@ -1149,8 +987,9 @@ section {
   height: auto;
 }
 
+
 /*--------------------------------------------------------------
-# timelines Section
+# Timelines Section
 --------------------------------------------------------------*/
 .timelines .nav-tabs {
   border: 0;
@@ -1269,6 +1108,7 @@ p.summary {
     opacity: 1;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Connect Section
@@ -1449,6 +1289,7 @@ p.summary {
   inset: auto 10px 0 10px;
 }
 
+
 /*--------------------------------------------------------------
 # Portfolio Details
 --------------------------------------------------------------*/
@@ -1508,7 +1349,6 @@ p.summary {
   padding: 0;
   color: #fff;
 }
-
 
 
 /*--------------------------------------------------------------
