--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -380,7 +380,7 @@ section {
     padding: 12px 20px;
     font-size: 16px;
     font-weight: 500;
-    color: rgba(var(--color-white-rgb), 0.7);
+    color: #fff;
     white-space: nowrap;
     transition: 0.3s;
   }
