--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -995,6 +995,11 @@ section {
 .timelines .nav-tabs {
   border: 0;
 }
+
+.col {
+    flex: 1 0 0%;
+}
+
 .timelines .nav-link {
   border: 0;
   padding: 25px 20px;
