--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -487,7 +487,6 @@ section {
   .navbar a:focus {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     padding: 12px 20px;
     font-size: 16px;
     font-weight: 500;
@@ -501,6 +500,7 @@ section {
     font-size: 22px;
     line-height: 0;
     margin-left: 5px;
+    margin-right: 7px;
   }
 
   .navbar a:hover,
