--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,13 +34,14 @@ body {
 # Sections & Section Header
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 63px 0;
   overflow: hidden;
 }
 
 .section-header {
   text-align: center;
-  padding-bottom: 30px;
+  padding-bottom: 56px;
+  padding-top: 56px;
 }
 
 .section-header h2 {
@@ -443,6 +444,11 @@ section {
     top: 0;
     left: 100%;
     visibility: visible;
+  }
+
+  .fa-arrow-left {
+    font-size: 25px;
+    padding-right: 4px;
   }
 }
 
@@ -1348,18 +1354,24 @@ p.summary {
 /*--------------------------------------------------------------
 # Connect Section
 --------------------------------------------------------------*/
-.connect .img {
+.connect .img, .socials .img {
   border-radius: 8px;
   overflow: hidden;
 }
 
-.connect .img img {
+.connect .img img, .socials .img img {
   transition: 0.6s;
 }
 
-.connect .details {
-  padding: 50px 30px;
-  margin: -100px 30px 0 30px;
+.connect .details, .socials .details {
+  padding-top: 34px;
+  padding-right: 30px;
+  padding-bottom: 9px;
+  padding-left: 30px;
+  margin-top: -50px;
+  margin-right: 30px;
+  margin-bottom: 0px;
+  margin-left: 30px;
   transition: all ease-in-out 0.3s;
   position: relative;
   background-color: #313131f1;
@@ -1368,7 +1380,7 @@ p.summary {
   box-shadow: 0px 0 25px rgba(var(--color-black-rgb), 0.1);
 }
 
-.connect .details .icon {
+.connect .details .icon, .socials .details .icon {
   margin: 0;
   width: 72px;
   height: 72px;
@@ -1387,7 +1399,7 @@ p.summary {
   border: 6px solid #7e2a2a;
 }
 
-.connect .details h3 {
+.connect .details h3, .socials .details h3 {
   color: #fff;
   font-weight: 700;
   margin: 10px 0 15px 0;
@@ -1395,27 +1407,27 @@ p.summary {
   transition: ease-in-out 0.3s;
 }
 
-.connect .details p {
+.connect .details p, .socials .details p {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
   color: #fff;
 }
 
-.connect .service-item:hover .details h3 {
+.connect .service-item:hover .details h3, .socials .service-item:hover .details h3 {
   color: #be7878;
 }
 
-.connect .service-item:hover .details .icon {
+.connect .service-item:hover .details .icon, .socials .service-item:hover .details .icon  {
   background-color: #be7878;
   border: 2px solid #7e2a2a;
 }
 
-.connect .service-item:hover .details .icon i {
+.connect .service-item:hover .details .icon i, .socials .service-item:hover .details .icon i {
   color: #000;
 }
 
-.connect .service-item:hover .img img {
+.connect .service-item:hover .img img, .socials .service-item:hover .img img {
   transform: scale(1.2);
 }
 
