--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -762,7 +762,10 @@ section {
 
 .portfolio-details .portfolio-info {
   padding: 30px;
+  background-color: #111111;
   box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
+  border-radius: 20px;
+  margin-bottom: 30px;
 }
 
 .portfolio-details .portfolio-info h3 {
@@ -785,6 +788,11 @@ section {
 
 .portfolio-details .portfolio-description {
   padding-top: 30px;
+  padding: 30px;
+  background-color: #111111;
+  box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
+  border-radius: 20px;
+  margin-bottom: 30px;
 }
 
 .portfolio-details .portfolio-description h2 {
