--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,10 +277,8 @@ h6 {
   width: 100%;
   height: 100vh;
   background: url("../img/hero-bg.jpg") top right no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 @media (min-width: 992px) {
