--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,18 +2,18 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
   color: #fff;
   background-color: #18191a;
 }
 
 a {
-  color: #f3015a;
+  color: #37619e;
   text-decoration: none;
 }
 
 a:hover {
-  color: #a80742;
+  color: #407edb;
   text-decoration: none;
 }
 
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "DM Sans", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .center-block {
@@ -31,6 +31,7 @@ h6 {
   margin-left: auto;
   margin-right: auto;
 }
+
 
 
 /*--------------------------------------------------------------
@@ -43,7 +44,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #f3015a;
+  background: #37619e;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -57,7 +58,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #a80742;
+  background: #407edb;
   color: #fff;
 }
 
@@ -85,7 +86,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #f3015a;
+  border: 6px solid #37619e;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -137,7 +138,8 @@ h6 {
 
 @media (min-width: 991px) {
   #main {
-    margin-left: 100px;
+    margin-left: 90px;
+    margin-right: 60px;
   }
 
 
@@ -169,13 +171,15 @@ h6 {
 .nav-menu a:focus {
   display: flex;
   align-items: center;
+  justify-content: center;
   color: #fff;
-  padding: 10px 18px;
+  padding: 17px;
+  padding-left: 17px;
   margin-bottom: 8px;
   transition: 0.3s;
   font-size: 15px;
-  border-radius: 50px;
-  background: #494042;
+  border-radius: 30px;
+  background: #131c29;
   height: 56px;
   width: 100%;
   overflow: hidden;
@@ -212,7 +216,7 @@ h6 {
 .nav-menu .active:focus,
 .nav-menu li:hover>a {
   color: #fff;
-  background: #f3015a;
+  background: #37619e;
 }
 
 .nav-menu a:hover span,
@@ -242,7 +246,7 @@ h6 {
   top: 10px;
   z-index: 9998;
   border: 0;
-  background: #494042;
+  background: #131c29;
   font-size: 30px;
   transition: all 0.4s;
   outline: none !important;
@@ -267,12 +271,65 @@ h6 {
 
 .mobile-nav-active .mobile-nav-toggle {
   color: #fff;
-  background-color: #f3015a;
+  background-color: #37619e;
 }
 
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+#centered-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#profile-picture {
+  background-image: url("../img/about.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 110px;
+  width: 270px;
+  height: 270px;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+#title {
+  margin-top: 24px;
+  font-size: 40px;
+  font-weight: 600;
+  text-align: center;
+  display: block;
+}
+
+#position {
+  font-size: 20px;
+  color: #407edb;
+  text-align: center;
+  display: block;
+}
+
+#media {
+  margin-top: 60px;
+  width: 415px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.media_link {
+  color: #ffffff;
+  transition: all .083s ease-in-out;
+}
+
+.media_link:hover {
+  transform: translateY(-2px);
+  opacity: 1;
+}
+
+
 #hero {
   width: 100%;
   height: 100vh;
@@ -315,7 +372,7 @@ h6 {
 }
 
 #hero p span {
-  color: #f3015a;
+  color: #37619e;
   letter-spacing: 1px;
   cursor: default;
 }
@@ -324,18 +381,6 @@ h6 {
   margin-top: 30px;
 }
 
-#hero .social-links a {
-  font-size: 24px;
-  display: inline-block;
-  color: #f3015a;
-  line-height: 1;
-  margin-right: 20px;
-  transition: 0.3s;
-}
-
-#hero .social-links a:hover {
-  color: #8b0537;
-}
 
 @media (max-width: 992px) {
   #hero {
@@ -353,7 +398,97 @@ h6 {
     font-size: 25px;
     line-height: 24px;
   }
+
+  #media {
+    margin-top: 60px;
+    width: 330px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
+
+/*--------------------------------------------------------------
+# About Me Section
+--------------------------------------------------------------*/
+.about-item {
+  margin-top: 6em;
+}
+
+.about-me .img {
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.about-me .img img {
+  transition: 0.6s;
+}
+
+.about-me .details {
+  padding-top: 34px;
+  padding-right: 30px;
+  padding-bottom: 9px;
+  padding-left: 30px;
+  margin-top: -50px;
+  margin-right: 23px;
+  margin-bottom: 0px;
+  margin-left: 23px;
+  transition: all ease-in-out 0.3s;
+  position: relative;
+  background-color: #313131f1;
+  text-align: center;
+  border-radius: 8px;
+  box-shadow: 0px 0 25px rgba(var(--color-black-rgb), 0.1);
+}
+
+
+.about-me .details .icon {
+  margin: 0;
+  width: 72px;
+  height: 72px;
+  background: #37619e;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 28px;
+  transition: ease-in-out 0.3s;
+  position: absolute;
+  top: -36px;
+  left: calc(50% - 36px);
+  border: 6px solid #37619e;
+}
+
+.about-me .details h3 {
+  color: #fff;
+  font-weight: 700;
+  margin: 10px 0 15px 0;
+  font-size: 22px;
+  transition: ease-in-out 0.3s;
+  cursor: default;
+}
+
+
+
+.about-me .service-item:hover .details h3 {
+  color: #407edb;
+}
+
+.about-me .service-item:hover .details .icon,
+.socials .service-item:hover .details .icon {
+  background-color: #407edb;
+  border: 2px solid #407edb;
+}
+
+.about-me .service-item:hover .details .icon i {
+  color: #fff;
+}
+
+.about-me .service-item:hover .img img {
+  transform: scale(1.2);
+}
+
 
 /*--------------------------------------------------------------
 # Sections General
@@ -385,7 +520,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #f3015a;
+  background: #37619e;
   bottom: 0;
   left: calc(50% - 20px);
   border-radius: 20px;
@@ -394,69 +529,6 @@ section {
 .section-title p {
   margin-bottom: 0;
   cursor: default;
-}
-
-/*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
-.about .content h3 {
-  font-weight: 700;
-  font-size: 26px;
-  color: #f3015a;
-  cursor: default;
-}
-
-.about .fst-italic {
-  font-style: italic!important;
-  cursor: default;
-}
-
-.about .content ul {
-  list-style: none;
-  padding: 0;
-}
-
-.about .content ul li {
-  margin-bottom: 20px;
-  display: flex;
-  align-items: center;
-  display: block;
-  cursor: default;
-}
-
-.about .content ul strong {
-  margin-right: 2px;
-}
-
-.about .content ul i {
-  font-size: 16px;
-  margin-right: 5px;
-  color: #f3015a;
-  line-height: 0;
-  cursor: default;
-}
-
-.about .content p:last-child {
-  margin-bottom: 0;
-}
-
-.img-fluid.about-img {
-  width: 100%;
-  max-width: 400px;
-  height: auto;
-}
-
-@media only screen and (min-width: 1201px) {
-  .img-fluid.about-img {
-    margin-top: -1em;
-  }
-}
-
-
-@media only screen and (min-width: 990px) and (max-width: 1200px) {
-  .img-fluid.about-img {
-    margin-top: 2em;
-  }
 }
 
 
@@ -495,7 +567,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #f3015a;
+  background-color: #37619e;
 }
 
 .skills-category {
@@ -520,7 +592,7 @@ section {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #f3015a;
+  border-left: 2px solid #37619e;
   position: relative;
   cursor: default;
 }
@@ -531,14 +603,14 @@ section {
   font-weight: bolder;
   text-transform: uppercase;
   font-family: "DM Sans", sans-serif;
-  color: #f3015a;
+  color: #37619e;
   margin-bottom: 10px;
   cursor: default;
 }
 
 .resume .resume-item h5 {
   font-size: 16px;
-  background: #f3015a;
+  background: #37619e;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
@@ -568,7 +640,7 @@ section {
   left: -9px;
   top: 0;
   background: #18191a;
-  border: 2px solid #f3015a;
+  border: 2px solid #37619e;
   cursor: default;
 }
 
@@ -584,7 +656,7 @@ section {
   margin: 0 auto 25px auto;
   list-style: none;
   text-align: center;
-  background: #494042;
+  background: #131c29;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -600,11 +672,12 @@ section {
   color: #fff;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
+  white-space: nowrap
 }
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #f3015a;
+  color: #407edb;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -616,13 +689,13 @@ section {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  background: rgba(69, 80, 91, 0.8);
+  background: rgba(43, 60, 77, 0.863);
   border-radius: 8px;
 }
 
 .portfolio .portfolio-wrap::before {
   content: "";
-  background: #9c013aaf;
+  background: #223255bb;
   position: absolute;
   left: 30px;
   right: 30px;
@@ -707,7 +780,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  color: #f3015a;
+  color: #407edb;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -753,11 +826,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #f3015a;
+  border: 1px solid #37619e;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #f3015a;
+  background-color: #37619e;
 }
 
 .portfolio-details .portfolio-info {
@@ -818,237 +891,6 @@ section {
   line-height: 1.4em;
 }
 
-
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
-.contact .info {
-  width: 100%;
-  background: #fff;
-}
-
-.contact .info i {
-  font-size: 20px;
-  color: #0563bb;
-  float: left;
-  width: 44px;
-  height: 44px;
-  background: #eef7ff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-  transition: all 0.3s ease-in-out;
-}
-
-.contact .info h4 {
-  padding: 0 0 0 60px;
-  font-size: 22px;
-  font-weight: 600;
-  margin-bottom: 5px;
-  color: #45505b;
-}
-
-.contact .info p {
-  padding: 0 0 0 60px;
-  margin-bottom: 0;
-  font-size: 14px;
-  color: #728394;
-}
-
-.contact .info .email,
-.contact .info .phone {
-  margin-top: 40px;
-}
-
-.contact .info .email:hover i,
-.contact .info .address:hover i,
-.contact .info .phone:hover i {
-  background: #f3015a;
-  color: #fff;
-}
-
-.contact .php-email-form {
-  width: 100%;
-  background: #fff;
-}
-
-.contact .php-email-form .form-group {
-  padding-bottom: 8px;
-}
-
-.contact .php-email-form .error-message {
-  display: none;
-  color: #fff;
-  background: #ed3c0d;
-  text-align: left;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .error-message br+br {
-  margin-top: 25px;
-}
-
-.contact .php-email-form .sent-message {
-  display: none;
-  color: #fff;
-  background: #18d26e;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-}
-
-.contact .php-email-form .loading {
-  display: none;
-  background: #fff;
-  text-align: center;
-  padding: 15px;
-}
-
-.contact .php-email-form .loading:before {
-  content: "";
-  display: inline-block;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  margin: 0 10px -6px 0;
-  border: 3px solid #18d26e;
-  border-top-color: #eee;
-  animation: animate-loading 1s linear infinite;
-}
-
-.contact .php-email-form input,
-.contact .php-email-form textarea {
-  border-radius: 4px;
-  box-shadow: none;
-  font-size: 14px;
-}
-
-.contact .php-email-form input {
-  height: 44px;
-}
-
-.contact .php-email-form textarea {
-  padding: 10px 12px;
-}
-
-.contact .php-email-form button[type=submit] {
-  background: #0563bb;
-  border: 0;
-  padding: 10px 35px;
-  color: #fff;
-  transition: 0.4s;
-  border-radius: 50px;
-}
-
-.contact .php-email-form button[type=submit]:hover {
-  background: #0678e3;
-}
-
-@keyframes animate-loading {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-
-/*--------------------------------------------------------------
-# Connect Section
---------------------------------------------------------------*/
-.connect .img {
-  border-radius: 8px;
-  overflow: hidden;
-}
-
-.connect .img img {
-  transition: 0.6s;
-}
-
-.connect .details {
-  padding-top: 34px;
-  padding-right: 30px;
-  padding-bottom: 9px;
-  padding-left: 30px;
-  margin-top: -50px;
-  margin-right: 30px;
-  margin-bottom: 0px;
-  margin-left: 30px;
-  transition: all ease-in-out 0.3s;
-  position: relative;
-  background-color: #313131f1;
-  text-align: center;
-  border-radius: 8px;
-  box-shadow: 0px 0 25px rgba(var(--color-black-rgb), 0.1);
-}
-
-.connect .details .icon {
-  margin: 0;
-  width: 72px;
-  height: 72px;
-  background: #f3015a;
-  border-radius: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-  color: #fff;
-  font-size: 28px;
-  transition: ease-in-out 0.3s;
-  position: absolute;
-  top: -36px;
-  left: calc(50% - 36px);
-  border: 6px solid #9b043c;
-}
-
-.connect .details h3 {
-  color: #fff;
-  font-weight: 700;
-  margin: 10px 0 15px 0;
-  font-size: 22px;
-  transition: ease-in-out 0.3s;
-  cursor: default;
-}
-
-.connect .details p {
-  line-height: 24px;
-  font-size: 14px;
-  margin-bottom: 0;
-  color: #fff;
-}
-
-.connect p.socials a {
-  line-height: 24px;
-  font-size: 20px;
-  margin-bottom: 0;
-  color: #fff;
-}
-
-.connect p.socials a:hover {
-  color: #a80742;
-}
-
-.connect .service-item:hover .details h3 {
-  color: #a80742;
-}
-
-.connect .service-item:hover .details .icon, .socials .service-item:hover .details .icon  {
-  background-color: #a80742;
-  border: 2px solid #6d032a;
-}
-
-.connect .service-item:hover .details .icon i {
-  color: #fff;
-}
-
-.connect .service-item:hover .img img {
-  transform: scale(1.2);
-}
-
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
@@ -1083,7 +925,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #f3015a;
+  background: #37619e;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1093,12 +935,6 @@ section {
   width: 36px;
   height: 36px;
   transition: 0.3s;
-}
-
-#footer .social-links a:hover {
-  background: #a80742;
-  color: #fff;
-  text-decoration: none;
 }
 
 #footer .copyright,
