--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -334,9 +334,10 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/hero-bg.png") top right no-repeat;
   background-size: cover;
   position: relative;
+  backdrop-filter: blur(5px);
 }
 
 
@@ -557,6 +558,7 @@ section {
 
 .skills .progress-bar-wrap {
   background: #413a3b;
+  border-radius: 10px;
 }
 
 .skills .progress-bar {
@@ -564,6 +566,7 @@ section {
   height: 10px;
   transition: 0.9s;
   background-color: #37619e;
+  border-radius: 10px;
 }
 
 .skills-category {
@@ -634,8 +637,21 @@ section {
   height: 16px;
   border-radius: 50px;
   left: -9px;
-  top: 0;
+  top: 5px;
   background: #18191a;
+  border: 2px solid #37619e;
+  cursor: default;
+}
+
+.resume .resume-item-present::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50px;
+  left: -9px;
+  top: 5px;
+  background: #37619e;
   border: 2px solid #37619e;
   cursor: default;
 }
@@ -829,7 +845,7 @@ section {
   background-color: #37619e;
 }
 
-.portfolio-details .portfolio-info {
+.portfolio-details .portfolio-description {
   padding: 30px;
   background-color: #111111;
   box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
@@ -837,23 +853,22 @@ section {
   margin-bottom: 30px;
 }
 
-.portfolio-details .portfolio-info h3 {
-  font-size: 28px;
+.portfolio-details .portfolio-description h3 {
+  font-size: 25px;
   font-weight: 700;
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #eee;
-  text-align: center;
-  
+  cursor: default;
 }
 
-.portfolio-details .portfolio-info ul {
+.portfolio-details .portfolio-description ul {
   list-style: none;
   padding: 0;
   font-size: 19px;
 }
 
-.portfolio-details .portfolio-info ul li+li {
+.portfolio-details .portfolio-description ul li+li {
   margin-top: 10px;
 }
 
@@ -905,6 +920,135 @@ section {
   color: #000;
   background-color: #37619e;
 }
+
+
+/*  */
+
+h6 a {
+  color: #fff;
+  font-size: 24px;
+}
+
+.port-cover.overlay:before {
+  background: rgba(0, 0, 0, 0.748);
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  backdrop-filter: blur(5px);
+}
+
+.port-cover > .container {
+  position: relative;
+  z-index: 2;
+}
+
+.port-cover, .port-cover .same-height {
+  padding: 3em 0;
+}
+
+.port-cover {
+  background-size: cover;
+  background-position: top center;
+  position: relative;
+}
+
+.port-cover.single-page h1, .port-cover.single-page .h1 {
+  color: #fff;
+  font-size: clamp(2rem, 3vw, 5rem);
+}
+
+.mb-4 {
+  margin-bottom: 1.5rem !important;
+}
+
+.post-meta .author-figure img {
+  width: 30px;
+  border-radius: 50%;
+}
+
+.sidebar-box {
+  margin-bottom: 4em;
+  font-size: 15px;
+  width: 100%;
+  float: left;
+  background: #111111;
+  box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
+  border-radius: 20px;
+}
+
+.sidebar-box .heading {
+  font-size: 25px;
+  color: #fff;
+  font-weight: 700;
+  margin: 20px;
+  margin-bottom: 30px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eee;
+  cursor: default;
+}
+
+.port-entry-sidebar ul li, .port-entry-footer ul li {
+  list-style: none;
+  padding: 0 0 20px 0;
+  margin: 20px;
+}
+
+.port-entry-sidebar ul li a, .port-entry-footer ul li a {
+  display: table;
+  color: #fff;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-sidebar ul li a .text, .port-entry-footer ul li a img, .port-entry-footer ul li a .text {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-footer ul li a img {
+  width: 90px;
+}
+
+.rounded {
+  border-radius: 0.25rem !important;
+}
+
+.me-4 {
+  margin-right: 1.5rem !important;
+}
+
+.port-entry-sidebar ul li a .text h4, .port-entry-sidebar ul li a .text .h4, .port-entry-footer ul li a .text h4, .port-entry-footer ul li a .text .h4 {
+  font-size: 18px;
+}
+
+.port-entry-sidebar ul li a img, .port-entry-sidebar ul li a .text, .port-entry-footer ul li a img, .port-entry-footer ul li a .text {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.sidebar-box *:last-child {
+  margin-bottom: 0;
+}
+
+.port-entry-sidebar ul, .port-entry-footer ul {
+  padding: 0;
+  margin: 0;
+}
+
+h4.sa-post {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.port-entry-sidebar .post-meta, .port-entry-footer .post-meta {
+  font-size: 14px;
+  color: #b3b3b3;
+}
+
 
 /*--------------------------------------------------------------
 # Footer
