--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1065,7 +1065,7 @@ h4.sa-post {
   font-size: 36px;
   font-weight: 700;
   position: relative;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Inter", sans-serif;
   padding: 0;
   margin: 0 0 15px 0;
 }
