--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -912,8 +912,8 @@ section {
 }
 
 .btn-outline-download {
-  color: #1d2434;
-  border-color: #1d2434;
+  color: #407edb;
+  border-color: #407edb;
   margin-top: 1em;
 }
 
