--- a/css/style-extension-1.css
+++ b/css/style-extension-1.css
@@ -362,6 +362,72 @@ hr {
   width: 0%;
 }
 
+/*  */
+.wbnrfz_details .details_catagory_wrap {
+  display: flex;
+  justify-content: space-between;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory .social_links a {
+  font-size: 16px;
+  color: #000;
+  margin-right: 20px;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory {
+  margin-bottom: 30px;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory h4 {
+  font-size: 16px;
+  color: #000;
+  font-weight: 400;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory span {
+  font-size: 12px;
+  color: #828793;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  display: block;
+  margin-bottom: 6px;
+}
+
+.wbnrfz_details .banner {
+  margin-bottom: 100px;
+}
+
+.wbnrfz_details .details_info {
+  margin-bottom: 70px;
+  text-align: justify;
+}
+
+.wbnrfz_details h1 {
+  font-size: clamp(34px, 8.5vw, 40px) !important;
+  margin-bottom: 50px;
+  font-weight: bold;
+}
+
+.wbnrfz_btn {
+  position: relative;
+  z-index: 1;
+  min-width: auto;
+  height: 46px;
+  line-height: 42px;
+  font-size: 14px;
+  font-weight: 500;
+  display: inline-block;
+  padding: 0 30px;
+  text-align: center;
+  text-transform: capitalize;
+  background-color: #bfc1ae;
+  color: #252525;
+  border-radius: 60px;
+  transition-duration: 500ms;
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
 
 /* :: 21.0 Responsive_Extension CSS - Width */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -424,6 +490,21 @@ hr {
     font-size: 10px;
   }
 
+  .wbnrfz_details .details_catagory_wrap {
+    display: block;
+    margin-bottom: 40px;
+  }
+
+  .wbnrfz_details h1 {
+    font-size: clamp(34px, 8.5vw, 40px) !important;
+    text-align: left;
+    margin-bottom: 50px;
+  }
+
+  .wbnrfz_btn {
+    min-width: 100%;
+  }
+
 }
 
 @media only screen and (min-width: 320px) and (max-width: 575px) {
@@ -476,6 +557,22 @@ hr {
   .about-me-content {
     padding: 56px 32px 20px;
   }
+
+  .wbnrfz_details .details_catagory_wrap {
+    display: block;
+    margin-bottom: 40px;
+  }
+
+  .wbnrfz_details h1 {
+    font-size: clamp(34px, 8.5vw, 40px) !important;
+    text-align: left;
+    margin-bottom: 50px;
+  }
+
+  .wbnrfz_btn {
+    min-width: 100%;
+  }
+  
 }
 
 
