--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,13 @@ ul li {
     margin-left: 0px;
 }
 
+.container {
+    width: 100%;
+    padding-right: 25px;
+    padding-left: 25px;
+    margin-right: auto;
+    margin-left: auto;
+}
 
 
 .bg-img {
@@ -560,7 +567,9 @@ section.follow-area.clearfix {
 }
 
 .pw-btn:focus,
-.pw-btn:hover {
+.pw-btn:hover,
+.wbnrfz_btn:focus,
+.wbnrfz_btn:hover {
     font-weight: 500;
     -webkit-box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
     box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
@@ -1381,9 +1390,20 @@ section.follow-area.clearfix {
     padding-bottom: 83px;
 }
 
+.wbnrfz-summ {
+    background-color: #f5f6f2;
+    padding-top: 50px;
+}
+
 
 /* :: 14.0 Breadcrumb CSS */
 .breadcrumb-area {
+    position: relative;
+    z-index: 1;
+    height: 100vh;
+}
+
+.breadcrumb-area-subp {
     position: relative;
     z-index: 1;
     height: 370px;
@@ -1395,7 +1415,7 @@ section.follow-area.clearfix {
     }
 }
 
-.breadcrumb-area .page-title {
+.breadcrumb-area .page-title, .breadcrumb-area-subp .page-title {
     color: #ffffff;
     font-size: 36px;
     cursor: default;
