--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 --------------------------------------------- */
 
 /* Import Fonts & All CSS */
-@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700");
+@import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap');
 @import url(bootstrap.min.css);
 @import url(animate.css);
 @import url(default-assets/classy-nav.css);
@@ -41,7 +41,7 @@
 }
 
 body {
-    font-family: "Poppins", sans-serif;
+    font-family: "Onest", sans-serif;
     font-weight: 400;
     font-size: 16px;
     position: relative;
@@ -54,7 +54,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Poppins", sans-serif;
+    font-family: "Onest", sans-serif;
     color: #252525;
     line-height: 1.3;
     font-weight: 600;
@@ -70,7 +70,6 @@ a:hover {
     -webkit-transition-duration: 500ms;
     -o-transition-duration: 500ms;
     transition-duration: 500ms;
-    outline: none;
     font-weight: 500;
 }
 
@@ -126,6 +125,13 @@ ul li {
     margin-left: 0px;
 }
 
+.container {
+    width: 100%;
+    padding-right: 25px;
+    padding-left: 25px;
+    margin-right: auto;
+    margin-left: auto;
+}
 
 
 .bg-img {
@@ -173,7 +179,9 @@ img.mfp-img {
 
 button.mfp-close,
 button.mfp-arrow {
-    background: #898a77;
+    background: #000;
+    height: 7em;
+    border-radius: 20px;
 }
 
 .mfp-bottom-bar {
@@ -327,6 +335,12 @@ input:required {
 
 .pt-50 {
     padding-top: 50px !important;
+}
+
+.section-padding-50 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #f6f7f2;
 }
 
 .section-padding-80 {
@@ -560,7 +574,9 @@ section.follow-area.clearfix {
 }
 
 .pw-btn:focus,
-.pw-btn:hover {
+.pw-btn:hover,
+.wbnrfz_btn:focus,
+.wbnrfz_btn:hover {
     font-weight: 500;
     -webkit-box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
     box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
@@ -1144,7 +1160,7 @@ section.follow-area.clearfix {
     -o-transition-duration: 800ms;
     transition-duration: 800ms;
     background-color: #ffffff;
-    padding: 80px 30px 50px;
+    padding: 47px 20px 17px;
     border-radius: 10px;
     box-shadow: 3px 0 15px -1px rgba(0, 0, 0, 0.15);
     position: relative;
@@ -1279,63 +1295,44 @@ section.follow-area.clearfix {
 }
 
 .timeline-content .period-date-edu {
-    -webkit-transition-duration: 800ms;
-    -o-transition-duration: 800ms;
-    transition-duration: 800ms;
-    height: 48px;
-    width: 131px;
-    background-color: #898a77;
-    display: inline-block;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 30px;
-    color: #ffffff;
-    font-size: 19px;
     position: absolute;
-    top: -26px;
-    left: 43%;
-    right: 43%;
-    margin-left: -38px;
+    padding: 5px 15px;
+    border-radius: 20px;
+    font-size: 18px;
+    color: #fff;
+    background-color: #898a77;
+    top: 15px;
+    left: 1.5em;
+    right: 1.5em;
+    font-weight: 500;
+    cursor: default;
 }
 
 .timeline-content .period-date-aa {
-    -webkit-transition-duration: 800ms;
-    -o-transition-duration: 800ms;
-    transition-duration: 800ms;
-    height: 48px;
-    width: 131px;
-    background-color: #df7d4d;
-    display: inline-block;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 30px;
-    color: #ffffff;
-    font-size: 19px;
     position: absolute;
-    top: -26px;
-    left: 43%;
-    right: 43%;
-    margin-left: -38px;
+    padding: 5px 15px;
+    border-radius: 20px;
+    font-size: 18px;
+    color: #fff;
+    background-color: #df7d4d;
+    top: 15px;
+    left: 1.5em;
+    right: 1.5em;
+    font-weight: 500;
+    cursor: default;
 }
 
 .timeline-content .period-date-exp {
-    -webkit-transition-duration: 800ms;
-    -o-transition-duration: 800ms;
-    transition-duration: 800ms;
-    height: 48px;
-    width: 208px;
-    background-color: #80a8cc;
-    display: inline-block;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 30px;
-    color: #ffffff;
-    font-size: 19px;
     position: absolute;
-    top: -26px;
-    left: 30%;
-    right: 30%;
-    margin-left: -38px;
+    padding: 5px 15px;
+    border-radius: 20px;
+    font-size: 18px;
+    color: #fff;
+    background-color: #80a8cc;
+    top: 15px;
+    left: 1.5em;
+    right: 1.5em;
+    font-weight: 500;
     cursor: default;
 }
 
@@ -1381,9 +1378,21 @@ section.follow-area.clearfix {
     padding-bottom: 83px;
 }
 
+.wbnrfz-summ {
+    background-color: #f5f6f2;
+    padding-top: 50px;
+    padding-bottom: 10px;
+}
+
 
 /* :: 14.0 Breadcrumb CSS */
 .breadcrumb-area {
+    position: relative;
+    z-index: 1;
+    height: 100vh;
+}
+
+.breadcrumb-area-subp {
     position: relative;
     z-index: 1;
     height: 370px;
@@ -1395,7 +1404,8 @@ section.follow-area.clearfix {
     }
 }
 
-.breadcrumb-area .page-title {
+.breadcrumb-area .page-title,
+.breadcrumb-area-subp .page-title {
     color: #ffffff;
     font-size: 36px;
     cursor: default;
@@ -1632,8 +1642,8 @@ li.breadcrumb-item.active a {
 }
 
 .pw-portfolio-area .container-fluid {
-    padding-right: 10%;
-    padding-left: 10%;
+    padding-right: 5%;
+    padding-left: 5%;
     background-color: #f5f6f2;
 }
 
