--- a/css/style-extension-1.css
+++ b/css/style-extension-1.css
@@ -13,8 +13,8 @@
 
 /* :: 17.0 Hero Details CSS */
 img.profile-pic {
-  width: 320px;
-  height: 320px;
+  width: 220px;
+  height: 220px;
 }
 
 .profile-det {
@@ -26,7 +26,7 @@ img.profile-pic {
 .profile-name {
   color: #fff;
   font-size: 35px;
-  padding-top: 1em;
+  padding-top: 0.5em;
   cursor: default;
 }
 
@@ -49,7 +49,8 @@ img.profile-pic {
 /* :: 18.0 Skills Section CSS */
 .owl-carousel.owl-loaded {
   display: block;
-  scale: 0.65;
+  scale: 0.8;
+  padding-top: 15px;
 }
 
 .skill-ara {
@@ -145,7 +146,7 @@ img.profile-pic {
 /* :: 20.0 Blog Post Section CSS */
 .breadcrumb-area .page-title-blog {
   color: #ffffff;
-  font-size: 65px;
+  font-size: 55px;
 }
 
 .mb-3 {
@@ -243,7 +244,13 @@ figcaption p {
   background-color: #e9eae5 !important;
   box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
   border-radius: 20px;
-  margin-bottom: 30px;
+  padding-bottom: 2px;
+}
+
+.about-author {
+  background-color: #e4e6cf !important;
+  box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
+  border-radius: 20px;
   padding-bottom: 2px;
 }
 
@@ -350,6 +357,11 @@ hr {
   scale: 0.3;
 }
 
+.img-blog-profile {
+  width: 60%;
+  height: auto;
+}
+
 .progress-bar {
   height: 7px;
   background: #b9683f;
@@ -360,6 +372,276 @@ hr {
   height: 5px;
   background: #b9683f;
   width: 0%;
+}
+
+/*  */
+.wbnrfz_details .details_catagory_wrap {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1400px;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory .social_links a {
+  font-size: 16px;
+  color: #000;
+  margin-right: 10px;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory .social_links a:hover {
+  color: #80a8cc;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory {
+  margin-bottom: 30px;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory h4 {
+  font-size: 16px;
+  color: #000;
+  font-weight: 400;
+}
+
+.wbnrfz_details .details_catagory_wrap .single_catagory span {
+  font-size: 12px;
+  color: #828793;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  display: block;
+  margin-bottom: 6px;
+}
+
+.wbnrfz_details .banner {
+  margin-bottom: 30px;
+}
+
+.wbnrfz_details .details_info {
+  margin-bottom: 20px;
+  text-align: justify;
+}
+
+.wbnrfz_details h1 {
+  font-size: clamp(34px, 8.5vw, 40px) !important;
+  margin-bottom: 50px;
+  font-weight: bold;
+}
+
+.wbnrfz_btn {
+  position: relative;
+  z-index: 1;
+  min-width: auto;
+  height: 46px;
+  line-height: 42px;
+  font-size: 14px;
+  font-weight: 500;
+  display: inline-block;
+  padding: 0 30px;
+  text-align: center;
+  text-transform: capitalize;
+  background-color: #e4e6cf;
+  color: #252525;
+  border-radius: 60px;
+  transition-duration: 500ms;
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
+.wbnrfz_details .col-lg-6, .wbnrfz_details .col-lg-4 {
+  padding-top: 25px;
+}
+
+.container-xxl {
+  max-width: 1450px;
+}
+
+.mfp-arrow {
+  top: 75%;
+}
+
+/*  */
+.container-blogList {
+  max-width: 1450px;
+}
+
+.blog-entry {
+  background: #ffffff;
+  margin-bottom: 30px;
+  border-radius: 20px;
+  box-shadow: 3px 0 15px -1px rgba(0, 0, 0, 0.15);
+}
+
+
+.blog-entry .col-md-6 {
+  position: relative;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.blog-entry .block-20 {
+  overflow: hidden;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 45%;
+  position: relative;
+  display: block;
+  border-radius: 20px;
+}
+
+.order-md-last {
+  -webkit-box-ordinal-group: 14;
+  -ms-flex-order: 13;
+  order: 13;
+}
+
+.blog-entry .text {
+  position: relative;
+  border-top: 0;
+  border-radius: 2px;
+  width: 55%;
+}
+
+.blog-entry a {
+  position: relative;
+  border-top: 0;
+  border-radius: 20px;
+  width: 55%;
+  color: #000;
+}
+
+.blog-entry .category {
+  position: absolute;
+  padding: 2px 15px;
+  border-radius: 20px;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #252525;
+  background-color: #e4e6cf;
+  top: 15px;
+  left: 15px;
+  font-weight: 500;
+}
+
+.blog-entry .text .heading {
+  font-size: 20px;
+  margin-bottom: 16px;
+}
+
+.blog-entry .icon {
+  width: 60px;
+  height: 60px;
+  background: rgba(255, 255, 255, 0.8);
+  opacity: 0;
+  border-radius: 50%;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.blog-entry:hover .icon {
+  opacity: 1;
+}
+
+.blog-entry a.blog-date {
+  color: #6d7072
+}
+
+.blog-entry .blog-date-div {
+  margin-top: 2em;
+  font-size: 14px;
+  color: #80a8cc;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
+}
+
+.d-block {
+  display: block !important;
+}
+
+.ftco-section-blog {
+  padding: 7em 0;
+  background-color: #f6f7f2;
+}
+
+.mt-5 {
+  margin-top: 3rem !important;
+}
+
+.block-20 {
+  overflow: hidden;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 45%;
+  position: relative;
+  display: block;
+}
+
+.block-27 ul li a,
+.block-27 ul li span {
+  text-align: center;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: #4a5562;
+  border: 1px solid #dee2e6;
+}
+
+.block-27 ul {
+  padding: 0;
+  margin: 0;
+}
+
+.block-27 ul li {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+
+.block-27 ul li a,
+.block-27 ul li span {
+  text-align: center;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  color: #4a5562;
+  border: 1px solid #dee2e6;
+  border-radius: 20px;
+}
+
+.block-27 ul li.active a,
+.block-27 ul li.active span {
+  background: #898a77;
+  color: #fff;
+  border: 1px solid transparent;
+  border-radius: 20px;
+}
+
+.col-pg {
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
+}
+
+.wbnrfz_details .banner img {
+  width: 80%;
+}
+
+.dropdown-item:focus {
+  background-color: #80a8cc;
+  color: #fff;
+}
+
+.dropdown-item:hover {
+  background-color: #80a8cc;
+  color: #fff;
 }
 
 
@@ -378,6 +660,10 @@ hr {
   .profile-link a {
     padding: 1.0em;
     font-size: 10px;
+  }
+
+  .wbnrfz_details .banner img {
+    width: 80%;
   }
 }
 
@@ -406,6 +692,18 @@ hr {
     padding: 56px 15px 20px;
   }
 
+  .container-blogList {
+    padding: 0px;
+  }
+
+  .blog-entry .category {
+    font-size: 12px;
+  }
+
+  .wbnrfz_details .banner img {
+    width: 100% !important;
+  }
+
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
@@ -422,6 +720,38 @@ hr {
   .profile-link a {
     padding: 1.0em;
     font-size: 10px;
+  }
+
+  .wbnrfz_details .details_catagory_wrap {
+    display: block;
+    margin-bottom: 40px;
+  }
+
+  .wbnrfz_details h1 {
+    font-size: clamp(34px, 8.5vw, 40px) !important;
+    text-align: left;
+    margin-bottom: 50px;
+  }
+
+  .wbnrfz_btn {
+    min-width: 100%;
+  }
+
+  .container-blogList {
+    padding: 0px;
+  }
+
+  .blog-entry .category {
+    font-size: 11px;
+  }
+
+  .img-blog-profile {
+    width: 100%;
+    height: auto;
+  }
+
+  .wbnrfz_details .banner img {
+    width: 100%;
   }
 
 }
@@ -475,7 +805,49 @@ hr {
 
   .about-me-content {
     padding: 56px 32px 20px;
+    margin-top: 12px;
   }
+
+  .wbnrfz_details .details_catagory_wrap {
+    display: block;
+    margin-bottom: 40px;
+  }
+
+  .wbnrfz_details h1 {
+    font-size: clamp(30px, 8.5vw, 30px) !important;
+    text-align: left;
+    margin-bottom: 50px;
+  }
+
+  .wbnrfz_btn {
+    min-width: 100%;
+  }
+
+  .container-blogList {
+    padding: 0px;
+  }
+
+  .blog-entry a {
+    font-size: 18px;
+  }
+
+  .blog-entry a.blog-date {
+    font-size: 14px;
+  }
+
+  .blog-entry .category {
+    font-size: 11px;
+  }
+
+  .img-blog-profile {
+    width: 100%;
+    height: auto;
+  }
+
+  .wbnrfz_details .banner img {
+    width: 100%;
+  }
+
 }
 
 
