2025-01 Feature Update for Version 2501 (4.4.1)

--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -12,6 +12,7 @@
         - 2.0.2 Min Width: 768px Max Width: 991px
         - 2.0.3 Min Width: 576px Max Width: 767px
         - 2.0.4 Min Width: 320px Max Width: 575px
+        - 2.0.5 Max Width: 319px
 
     - 3.0 Height Breakpoints
         - 3.0.1 Min Height: 531px Max Height: 620px
@@ -20,6 +21,7 @@
         - 3.0.4 Min Height: 320px Max Height: 399px
         - 3.0.5 Min Height: 319px
                 
+> dark theme
 --------------------------------------------- */
 
 /* ------------------------------------------ 1.0 Specific Breakpoints ------------------------------------------ */
@@ -273,6 +275,17 @@
         flex: 0 0 auto;
         width: 50%;
     }
+
+    .wbnrfz_btn_theme,
+    body.dark-mode .wbnrfz_btn_theme {
+        margin-left: 15px !important;
+        margin-top: 15px !important;
+    }
+
+    body.dark-mode .classy-nav-container .classy-navbar .classynav ul li a {
+        background-color: #1f2022;
+        color: #fff;
+    }
 }
 
 /* ---- */
@@ -408,7 +421,7 @@
     .breadcrumb-area.blog .breadcrumb-content .page-title {
         font-size: 30px;
     }
-    
+
     .breadcrumb-area.blog .breadcrumb-content .post-meta a {
         font-size: 13px;
     }
@@ -426,6 +439,17 @@
     .col-sm-4 {
         flex: 0 0 auto;
         width: 100%;
+    }
+
+    body.dark-mode .classy-nav-container .classy-navbar .classynav ul li a {
+        background-color: #1f2022;
+        color: #fff;
+    }
+
+    .wbnrfz_btn_theme,
+    body.dark-mode .wbnrfz_btn_theme {
+        margin-left: 15px !important;
+        margin-top: 15px !important;
     }
 }
 
@@ -524,9 +548,33 @@
         width: 100%;
     }
 
+    body.dark-mode .classy-nav-container .classy-navbar .classynav ul li a {
+        background-color: #1f2022;
+        color: #fff;
+    }
+
+    .wbnrfz_btn_theme,
+    body.dark-mode .wbnrfz_btn_theme {
+        margin-left: 15px !important;
+        margin-top: 15px !important;
+    }
 }
 
 /* ---- */
+
+/* 2.0.5 Max Width: 319px */
+@media only screen and (max-width: 319px) {
+    body.dark-mode .classy-nav-container .classy-navbar .classynav ul li a {
+        background-color: #1f2022;
+        color: #fff;
+    }
+
+    .wbnrfz_btn_theme,
+    body.dark-mode .wbnrfz_btn_theme {
+        margin-left: 15px !important;
+        margin-top: 15px !important;
+    }
+}
 
 
 /* ------------------------------------------ 3.0 Height Breakpoints ------------------------------------------ */
