--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,15 @@
     - 13.0 Timelines/Summary
     - 14.0 Breadcrumb
     - 15.0 Blog
-    - 16.0 Works by NRFZ
+    - 16.0 Works By NRFZ
     - 17.0 Hero Details
     - 18.0 Skills Section
-    - 19.0 Works by NRFZ_Details Section
+    - 19.0 Works By NRFZ_Details Section
     - 20.0 Blog Post Section
+    - 21.0 Theme Function
 
 > style-breakpoints
+> dark theme
 --------------------------------------------- */
 
 /* ------------------------------------------ Import ------------------------------------------*/
@@ -380,10 +382,9 @@ input:required {
     background-color: #f6f7f2;
 }
 
-section.follow-area.clearfix {
+.follow-area.clearfix {
     padding-top: 80px;
     padding-bottom: 80px;
-    background-color: #f6f7f2;
 }
 
 /* ------------------------------------------ */
@@ -523,10 +524,14 @@ section.follow-area.clearfix {
     color: #ffffff;
 }
 
-.progress-bar {
-    height: 7px;
-    background: #b9683f;
+#scrollIndicator {
+    height: 5px;
+    background: linear-gradient(90deg,
+            #de650f 0%,
+            #fd1d1d 50%,
+            #df9e43 100%);
     width: 0%;
+    filter: drop-shadow(0 0 5px);
 }
 
 .scroll-bar {
@@ -1171,7 +1176,7 @@ classynav ul li.has-down>a::after,
     border-radius: 20px;
     font-size: 18px;
     color: #fff;
-    background-color: #80a8cc;
+    background-color: #708ea8;
     top: 15px;
     left: 1.5em;
     right: 1.5em;
@@ -1216,7 +1221,7 @@ classynav ul li.has-down>a::after,
 }
 
 .about-me-summ {
-    background-color: #f5f6f2;
+    background-color: #e9eae5;
     padding-top: 50px;
     padding-bottom: 83px;
 }
@@ -1456,12 +1461,12 @@ li.breadcrumb-item.active a {
 
 /* ------------------------------------------ */
 
-/* ------------------------------------------ 16.0 Works by NRFZ ------------------------------------------ */
-.pw-portfolio-area {
+/* ------------------------------------------ 16.0 Works By NRFZ ------------------------------------------ */
+/* .pw-portfolio-area {
     position: relative;
     z-index: 1;
     background-color: #f5f6f2;
-}
+} */
 
 .pw-portfolio-area .container-fluid {
     padding-right: 5%;
@@ -1678,20 +1683,22 @@ img.profile-pic {
 }
 
 .skill-ara .single-skill .progress {
-    height: 8px;
+    height: 5px;
     border-radius: 0;
     background-color: #dbe3e9;
     border-radius: 4px;
 }
 
 .skill-ara .single-skill .progress-bar {
-    background-color: #80a8cc;
-    border-radius: 7px;
+    background: linear-gradient(90deg, #708ea8 0%, #619bcd 45%, #72a7d6 100%);
+    width: 0%;
+    filter: drop-shadow(0 0 5px);
+    border-radius: 5px;
 }
 
 /* ------------------------------------------ */
 
-/* ------------------------------------------ 19.0 Works by NRFZ_Details Section ------------------------------------------ */
+/* ------------------------------------------ 19.0 Works By NRFZ_Details Section ------------------------------------------ */
 .wbnrfz_details .details_catagory_wrap {
     display: flex;
     justify-content: space-between;
@@ -1722,7 +1729,7 @@ img.profile-pic {
     font-size: 12px;
     color: #828793;
     font-weight: 400;
-    font-family: "Roboto", sans-serif;
+    font-family: "Onest", sans-serif;
     display: block;
     margin-bottom: 6px;
 }
@@ -1888,7 +1895,7 @@ figcaption p {
 }
 
 .about-author {
-    background-color: #e4e6cf !important;
+    background-color: #e4e6cf;
     box-shadow: 0px 0 30px rgba(69, 80, 91, 0.08);
     border-radius: 20px;
     padding-bottom: 2px;
@@ -2004,25 +2011,25 @@ hr {
 
 .container-blogList {
     max-width: 1450px;
-  }
-  
-  .blog-entry {
+}
+
+.blog-entry {
     background: #ffffff;
     margin-bottom: 30px;
     border-radius: 20px;
     box-shadow: 3px 0 15px -1px rgba(0, 0, 0, 0.15);
-  }
-  
-  
-  .blog-entry .col-md-6 {
+}
+
+
+.blog-entry .col-md-6 {
     position: relative;
     width: 100%;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
-  }
-  
-  .blog-entry .block-20 {
+}
+
+.blog-entry .block-20 {
     overflow: hidden;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2031,30 +2038,30 @@ hr {
     position: relative;
     display: block;
     border-radius: 20px;
-  }
-  
-  .order-md-last {
+}
+
+.order-md-last {
     -webkit-box-ordinal-group: 14;
     -ms-flex-order: 13;
     order: 13;
-  }
-  
-  .blog-entry .text {
+}
+
+.blog-entry .text {
     position: relative;
     border-top: 0;
     border-radius: 2px;
     width: 55%;
-  }
-  
-  .blog-entry a {
+}
+
+.blog-entry a {
     position: relative;
     border-top: 0;
     border-radius: 20px;
     width: 55%;
     color: #000;
-  }
-  
-  .blog-entry .category {
+}
+
+.blog-entry .category {
     position: absolute;
     padding: 2px 15px;
     border-radius: 20px;
@@ -2065,14 +2072,14 @@ hr {
     top: 15px;
     left: 15px;
     font-weight: 500;
-  }
-  
-  .blog-entry .text .heading {
+}
+
+.blog-entry .text .heading {
     font-size: 20px;
     margin-bottom: 16px;
-  }
-  
-  .blog-entry .icon {
+}
+
+.blog-entry .icon {
     width: 60px;
     height: 60px;
     background: rgba(255, 255, 255, 0.8);
@@ -2081,40 +2088,40 @@ hr {
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
-  }
-  
-  .blog-entry:hover .icon {
+}
+
+.blog-entry:hover .icon {
     opacity: 1;
-  }
-  
-  .blog-entry a.blog-date {
+}
+
+.blog-entry a.blog-date {
     color: #6d7072
-  }
-  
-  .blog-entry .blog-date-div {
+}
+
+.blog-entry .blog-date-div {
     margin-top: 2em;
     font-size: 14px;
     color: #80a8cc;
-  }
-  
-  .p-4 {
+}
+
+.p-4 {
     padding: 1.5rem !important;
-  }
-  
-  .d-block {
+}
+
+.d-block {
     display: block !important;
-  }
-  
-  .ftco-section-blog {
+}
+
+.ftco-section-blog {
     padding: 7em 0;
     background-color: #f6f7f2;
-  }
-  
-  .mt-5 {
+}
+
+.mt-5 {
     margin-top: 3rem !important;
-  }
-  
-  .block-20 {
+}
+
+.block-20 {
     overflow: hidden;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2122,10 +2129,10 @@ hr {
     width: 45%;
     position: relative;
     display: block;
-  }
-  
-  .block-27 ul li a,
-  .block-27 ul li span {
+}
+
+.block-27 ul li a,
+.block-27 ul li span {
     text-align: center;
     display: inline-block;
     width: 40px;
@@ -2133,20 +2140,20 @@ hr {
     line-height: 40px;
     color: #4a5562;
     border: 1px solid #dee2e6;
-  }
-  
-  .block-27 ul {
+}
+
+.block-27 ul {
     padding: 0;
     margin: 0;
-  }
-  
-  .block-27 ul li {
+}
+
+.block-27 ul li {
     display: inline-block;
     margin-bottom: 4px;
-  }
-  
-  .block-27 ul li a,
-  .block-27 ul li span {
+}
+
+.block-27 ul li a,
+.block-27 ul li span {
     text-align: center;
     display: inline-block;
     width: 40px;
@@ -2155,14 +2162,14 @@ hr {
     color: #4a5562;
     border: 1px solid #dee2e6;
     border-radius: 20px;
-  }
-  
-  .block-27 ul li.active a,
-  .block-27 ul li.active span {
+}
+
+.block-27 ul li.active a,
+.block-27 ul li.active span {
     background: #898a77;
     color: #fff;
     border: 1px solid transparent;
     border-radius: 20px;
-  }
+}
 
 /* ------------------------------------------ */
