--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -559,6 +559,10 @@
         margin-top: 15px !important;
     }
 
+    body.dark-mode .wbnrfz_details .banner-eicw img {
+        border-radius: 10px !important;
+    }
+
 }
 
 /* ---- */
@@ -574,6 +578,10 @@
     body.dark-mode .wbnrfz_btn_theme {
         margin-left: 15px !important;
         margin-top: 15px !important;
+    }
+
+    body.dark-mode .wbnrfz_details .banner-eicw img {
+        border-radius: 15px !important;
     }
 }
 
